samples/_failures_safe/1761276226_cc0d06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d01a3c11.c: In function ‘main’:
./samples/SAFE/__tmp_d01a3c11.c:141:16: error: missing terminating " character
  141 |         printf("Invalid size
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d01a3c11.c:141:9: error: expected expression at end of input
  141 |         printf("Invalid size
      |         ^~~~~~
./samples/SAFE/__tmp_d01a3c11.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d01a3c11.c:141:9: error: expected declaration or statement at end of input
